--- a/ElandJSTL_Project/src/druid.properties
+++ b/ElandJSTL_Project/src/druid.properties
@@ -1,7 +1,7 @@
 driverClassName=com.mysql.jdbc.Driver
 url=jdbc:mysql:///day17
 username=root
-password=zyq500520
+password=root
 initialSize=5
 maxActive=10
 maxWait=3000
