--- a/Filter&ListenerTest/web/WEB-INF/web.xml
+++ b/Filter&ListenerTest/web/WEB-INF/web.xml
@@ -13,4 +13,13 @@
 <!--        <url-pattern>/*</url-pattern>-->
 <!--    </filter-mapping>-->
 
+<!--    监听器配置-->
+<listener>
+    <listener-class>cn.zyq.web.listener.ContextLoaderListner</listener-class>
+</listener>
+<!--    指定初始化参数信息-->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/classes/applicationContext.xml</param-value>
+    </context-param>
 </web-app>
